--- a/nodemanager/Dockerfile
+++ b/nodemanager/Dockerfile
@@ -2,6 +2,11 @@ FROM bde2020/hadoop-base:2.0.0-hadoop3.2.1-java8
 
 MAINTAINER Ivan Ermilov <ivan.s.ermilov@gmail.com>
 
+# Install Python 3.6
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends python3.6 \
+    && update-alternatives --install /usr/bin/python python /usr/bin/python3.6 1 \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
+
 HEALTHCHECK CMD curl -f http://localhost:8042/ || exit 1
 
 ADD run.sh /run.sh
