--- a/datanode/Dockerfile
+++ b/datanode/Dockerfile
@@ -1,21 +1,5 @@
-FROM bde2020/hadoop-base:2.0.0-hadoop3.2.1-java8
+FROM apache/hadoop:3.4.0
 
-MAINTAINER Ivan Ermilov <ivan.s.ermilov@gmail.com>
+RUN mkdir -p /opt/hadoop/dfsdata/datanode
 
-# Install Python 3.6
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends python3.6 \
-    && update-alternatives --install /usr/bin/python python /usr/bin/python3.6 1 \
-    && apt-get clean && rm -rf /var/lib/apt/lists/*
-
-HEALTHCHECK CMD curl -f http://localhost:9864/ || exit 1
-
-ENV HDFS_CONF_dfs_datanode_data_dir=file:///hadoop/dfs/data
-RUN mkdir -p /hadoop/dfs/data
-VOLUME /hadoop/dfs/data
-
-ADD run.sh /run.sh
-RUN chmod a+x /run.sh
-
-EXPOSE 9864
-
-CMD ["/run.sh"]
+CMD ["sh", "-c", "hdfs datanode"]
