--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,4 +69,14 @@ services:
     depends_on:
       - namenode
 
+  flask-app:
+    build: ./backend
+    ports:
+      - "5000:5000"
+    depends_on:
+      - namenode
+      - resourcemanager
+      - datanode1
+    container_name: flask-app
+
   
